Updated theh index.html.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                 <input 
                 type="text" 
                 id="userLocation"
-                placeholder="search for places ..">
+                placeholder="search for places .."/>
+
+                <select class="converter" id="converter">
+                    <option>°C</option>
+                    <option>°F</option>
+                </select>
             </div>
         </div>
     </div>
