Updated index and style file.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
                     <option>°C</option>
                     <option>°F</option>
                 </select>
+
+                <i class="fa fa-search"></i>
             </div>
+
+            <div class="weatherIcon"></div>
+            <h2 class="temperature"></h2>
+            <div class="feelsLike"></div>
+            <div class="description"></div>
+            <hr/>
+            <div class="date"></div>
+            <div class="city"></div>
         </div>
     </div>
 </body>
