updated teh index.html-outputsection.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <div class="date"></div>
             <div class="city"></div>
         </div>
+
+        <div class="weather-output">
+            <h2 class="heading">Today</h2>
+            <h2 class="heading"></h2>
+        </div>
     </div>
 </body>
 </html>
