Updated the script file along with index file.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <option>°F</option>
                 </select>
 
-                <i class="fa fa-search"></i>
+                <i class="fa fa-search" onclick="findUserLocation()"></i>
             </div>
 
             <div class="weatherIcon"></div>
