--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <h1 id="CValue"></h1>
                 </div>
             
-                <div class="uv-index">
-                    UV-Index
-                    <i class="fa-solid fa-bacon"></i>
-                    <h1 id="UVValue"></h1>
+                <div class="v-index">
+                    Visibility
+                    <i class="fa-solid fa-smog"></i>
+                    <h1 id="VValue"></h1>
                 </div>
 
                 <div class="pressure">
